added more pages

--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
     <div class="container"> <a class="navbar-brand text-primary" href="#">
         <b>
         </b></a><b>
-        <h1 class="display-4 text-body"><a class="text-body text-decoration-none" href="index.html"><b>Deepa Jagyasi</b></a></h1><b style=""></b>
+        <h1 class="display-4 text-body"><a class="text-body text-decoration-none" href="index.html"><b>Deepa Jagyasi</b></a></h1>
       </b>
-      <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar4">
+      <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse" data-target="#navbar4" style="">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar4">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link active" href="index.html">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="Current_Research.html">Current Research</a> </li>
           <li class="nav-item"> <a class="nav-link" href="DeepaJagyasi_CV.pdf">CV</a> </li>
           <li class="nav-item"> <a class="nav-link" href="Publications.html">Publications</a> </li>
           <li class="nav-item"> <a class="nav-link" href="blog.html">Research Blog<br></a> </li>
+          <li class="nav-item"> <a class="nav-link" href="Contact.html">Contact<br></a> </li>
         </ul>
       </div>
     </div>
@@ -44,8 +46,8 @@
     <div class="container">
       <div class="row" style="">
         <div class="col-md-12" style="">
-          <h2 class="mb-3">About</h2>
-          <p style="">I am a Research Engineer at Telecom-Paris, working with Prof. <a href="https://marceaucoupechoux.wp.imt.fr/en/" target="_blank">Marceau Coupechoux</a>. My current work is on design of secure and robust transceivers for Misssion Critical Communication (MCC) scenarios. MCC is all communications related to the safety and security of the civil society such as public safety services, including police forces, firemen, rescue and ambulance services, or employees critical infrastructures, like energy and transportation suppliers. MCC are conveyed by Professional Mobile Radio (PMR) networks. Such services being dispensible in critical circumstances; group communication, wide coverage, security from eavesdroppers become indespensible requirements&nbsp; from MCC. In this wok, we focus on design of MCC systems in order to facilitate these inherent needs. This work is supported by&nbsp;with the help of the company ETELM and is the part of the project EXTRANGE4G. The work is performed at LINCS laboratory, Paris, France.&nbsp;<br><br>The other part of my research at Telecom-Paris include Machine learning for WIreless Communication.&nbsp;<br><br><br>In particular my research interests are:&nbsp;<br></p>
+          <p style="">I am a Research Engineer at Telecom-Paris, working with Prof. <a href="https://marceaucoupechoux.wp.imt.fr/en/" target="_blank">Marceau Coupechoux</a>. My current work is on design of secure and robust transceivers for Misssion Critical Communication (MCC) scenarios. MCC is all communications related to the safety and security of the civil society such as public safety services, including police forces, firemen, rescue and ambulance services, or employees critical infrastructures, like energy and transportation suppliers. MCC are conveyed by Professional Mobile Radio (PMR) networks. Such services being dispensible in critical circumstances; group communication, wide coverage, security from eavesdroppers become indespensible requirements&nbsp; from MCC. In this wok, we focus on design of MCC systems in order to facilitate these inherent needs. This work is supported by&nbsp;with the help of the company ETELM and is the part of the project EXTRANGE4G. The work is performed at LINCS laboratory, Paris, France.&nbsp;<br><br>The other part of my research at Telecom-Paris include Machine learning for WIreless Communication.&nbsp;<br></p>
+          <h4 class="" style=""><u>Reasearch Interests:</u></h4>
           <ul class="" style="">
             <li contenteditable="true">Millimeter Wave Comunication</li>
             <li>Misssion Critical Communication</li>
@@ -73,13 +75,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12"></div>
       </div>
     </div>
   </div>
