--- a/Current_Research.html
+++ b/Current_Research.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="theme.css">
+  <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
 </head>
 
-<body class="">
+<body>
   <nav class="navbar navbar-expand-md navbar-light w-100 border" style="">
     <div class="container"> <a class="navbar-brand text-primary" href="#">
         <b>
@@ -22,10 +22,10 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="Current_Research.html">Current Research</a> </li>
+          <li class="nav-item"> <a class="nav-link active" href="Current_Research.html">Current Research</a> </li>
           <li class="nav-item"> <a class="nav-link" href="DeepaJagyasi_CV.pdf">CV</a> </li>
           <li class="nav-item"> <a class="nav-link" href="Publications.html">Publications</a> </li>
-          <li class="nav-item"> <a class="nav-link active" href="blog.html">Research Blog<br></a> </li>
+          <li class="nav-item"> <a class="nav-link" href="blog.html">Research Blog<br></a> </li>
           <li class="nav-item"> <a class="nav-link" href="Contact.html">Contact<br></a> </li>
         </ul>
       </div>
@@ -35,28 +35,18 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="carousel slide justify-content-center align-items-center d-flex w-75 mx-auto" data-ride="carousel" id="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-bubble-dark.svg" height="75%">
-                <div class="carousel-caption">
-                  <h5 class="m-0">Carousel</h5>
-                  <p>with controls</p>
-                </div>
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-bubble-light.svg">
-                <div class="carousel-caption">
-                  <h5 class="m-0">Carousel</h5>
-                  <p>with controls</p>
-                </div>
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-moon.svg">
-                <div class="carousel-caption">
-                  <h5 class="m-0">Carousel</h5>
-                  <p>with controls</p>
-                </div>
-              </div>
-            </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
-          </div>
+          <h3 class=""><b>Current Research</b></h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="">
+          <p class="lead" contenteditable="true">The best way to connect with me is on my email: deepa (dot) jagyasi (at) telecom-paris (dot) fr<br></p>
+          <h3 class=""><b>Mission Critical Communication</b><br></h3>
+          <p class="lead"> My current work is on design of secure and robust transceivers for Misssion Critical Communication (MCC) scenarios. MCC is all communications related to the safety and security of the civil society such as public safety services, including police forces, firemen, rescue and ambulance services, or employees critical infrastructures, like energy and transportation suppliers. MCC are conveyed by Professional Mobile Radio (PMR) networks. Such services being dispensible in critical circumstances; group communication, wide coverage, security from eavesdroppers become indespensible requirements from MCC. In this wok, we focus on design of MCC systems in order to facilitate these inherent needs. This work is supported by with the help of the company ETELM and is the part of the project EXTRANGE4G. The work is performed at LINCS laboratory, Paris, France. </p>
+          <h3 class=""><b>Physical Layer Secure Transceiver Design</b><br></h3>
+          <p class="lead">&nbsp;Email: deepajagyasi (at) gmail (dot) com<br></p>
+          <h3 class=""><b>Machine Learning for Wireless Communication</b><br></h3>
+          <p class="lead">Room no: 47<br>4th Floor,&nbsp;LINCS laboratory,<br>23 Avenue D'Italie,<br>75013, Paris,&nbsp;<br>France.</p>
         </div>
       </div>
     </div>
