--- a/Publications.html
+++ b/Publications.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-md navbar-light w-100 border">
+  <nav class="navbar navbar-expand-md navbar-light w-100 border" style="">
     <div class="container"> <a class="navbar-brand text-primary" href="#">
         <b>
         </b></a><b>
@@ -22,9 +22,11 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="Current_Research.html">Current Research</a> </li>
           <li class="nav-item"> <a class="nav-link" href="DeepaJagyasi_CV.pdf">CV</a> </li>
           <li class="nav-item"> <a class="nav-link active" href="Publications.html">Publications</a> </li>
           <li class="nav-item"> <a class="nav-link" href="blog.html">Research Blog<br></a> </li>
+          <li class="nav-item"> <a class="nav-link" href="Contact.html">Contact<br></a> </li>
         </ul>
       </div>
     </div>
