--- a/Current_Research.html
+++ b/Current_Research.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="https://static.pingendo.com/bootstrap/bootstrap-4.3.1.css">
+  <link rel="stylesheet" href="theme.css">
 </head>
 
 <body>
@@ -35,18 +35,17 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3 class=""><b>Current Research</b></h3>
+          <h3 class=""><b>Current Research</b><br><br></h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <p class="lead" contenteditable="true">The best way to connect with me is on my email: deepa (dot) jagyasi (at) telecom-paris (dot) fr<br></p>
-          <h3 class=""><b>Mission Critical Communication</b><br></h3>
-          <p class="lead"> My current work is on design of secure and robust transceivers for Misssion Critical Communication (MCC) scenarios. MCC is all communications related to the safety and security of the civil society such as public safety services, including police forces, firemen, rescue and ambulance services, or employees critical infrastructures, like energy and transportation suppliers. MCC are conveyed by Professional Mobile Radio (PMR) networks. Such services being dispensible in critical circumstances; group communication, wide coverage, security from eavesdroppers become indespensible requirements from MCC. In this wok, we focus on design of MCC systems in order to facilitate these inherent needs. This work is supported by with the help of the company ETELM and is the part of the project EXTRANGE4G. The work is performed at LINCS laboratory, Paris, France. </p>
-          <h3 class=""><b>Physical Layer Secure Transceiver Design</b><br></h3>
-          <p class="lead">&nbsp;Email: deepajagyasi (at) gmail (dot) com<br></p>
-          <h3 class=""><b>Machine Learning for Wireless Communication</b><br></h3>
-          <p class="lead">Room no: 47<br>4th Floor,&nbsp;LINCS laboratory,<br>23 Avenue D'Italie,<br>75013, Paris,&nbsp;<br>France.</p>
+          <h4 class=""><u>Mission Critical Communication</u><br></h4>
+          <p class="text-justify">Misssion Critical Communications (MCC) are all communication related to the safety and security of the civil society such as public safety services, including police forces, firemen, rescue and ambulance services, or employee critical infrastructures, like energy and transportation suppliers. MCC are conveyed by Professional Mobile Radio (PMR) networks. Such services being dispensible in critical circumstances; group communication, wide coverage, security from eavesdroppers become indespensible requirements from MCC. In this wok, I focus on design of MCC systems in order to facilitate these inherent needs.&nbsp;</p>
+          <h4 class=""><u>Physical Layer Secure Transceiver Design</u><br></h4>
+          <p class="text-justify">Wireless communication is prone to attacks from malicious eavesdroppers due to its broadcast nature. Physical layer security is a powerful tool that utilizes concepts of signal processing to provide the security at the physical layer of the network. It mainly exploits the characteristics of the eavesdroppers channel for the benefit of legitimate users. In MCC, the need for secrecy is crucial than ever to prevent from any misleading effects of compromised security in critical applications. Thus at Telecom-Paris, I work on developing physical layer-secured transceiver designs for MCC. The secrecy is added against eavesdroppers by various means, including artificial noise-aided security, security through MIMO beamforming, and by considering imperfections in available knowledge of eavesdroppers' channels. The concepts developed during this work can also be adapted in other wireless communication applications.</p>
+          <h4 class=""><u style="">Machine Learning for Wireless Communication</u><br></h4>
+          <p class="text-justify">With its ability to learn complex non-linear functions to perform a task, machine learning has found its way into the domain of wireless communication. It has become an active participant in a vast range of research problems, including resource allocation, channel estimation, transceivers filter design, localization, etc. I am utilizing machine learning, specifically deep neural networks, for the millimeter-wave base-station and beam selection in a multi-base-station heterogeneous (sub-6GHz and millimeter wave) network architecture. The learning is performed by using the channel characteristics from only the sub-6GHz legacy base-stations. </p>
         </div>
       </div>
     </div>
