--- a/blog.html
+++ b/blog.html
@@ -35,28 +35,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="carousel slide justify-content-center align-items-center d-flex w-75 mx-auto" data-ride="carousel" id="carousel">
-            <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-bubble-dark.svg" height="75%">
-                <div class="carousel-caption">
-                  <h5 class="m-0">Carousel</h5>
-                  <p>with controls</p>
-                </div>
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-bubble-light.svg">
-                <div class="carousel-caption">
-                  <h5 class="m-0">Carousel</h5>
-                  <p>with controls</p>
-                </div>
-              </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="https://static.pingendo.com/cover-moon.svg">
-                <div class="carousel-caption">
-                  <h5 class="m-0">Carousel</h5>
-                  <p>with controls</p>
-                </div>
-              </div>
-            </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
-          </div>
+          <h3 class="text-muted">Coming Soon..</h3>
         </div>
       </div>
     </div>
