--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
       <div class="row">
         <div class="col-md-12">
           <h3 class="mb-3"><u>About Me (On Personal Front)</u></h3>
-          <p>&nbsp; &nbsp; I have always been an active and fun-loving person (Well! at least I try to be on most of the days!). I believe in cherishing small moments of life, which overall summaries happy experiences. Coming from India, dancing and singing on every little occasion has been an active part of my growing up phase. I like to meet, talk, and to listen to people and know their stories. I enjoy food, which has also developed my interest in cooking and experimenting with different cuisines. I love traveling and exploring different corners of the world, and learning about cultures. I root for green earth and strongly believe in the power of each individual in contributing towards it. I am doing my bit in every way possible, and I hope everyone else is too!</p>
+          <p>&nbsp; &nbsp; I have always been an active and fun-loving person. I believe in cherishing small moments of life, which overall summaries happy experiences. Coming from India, dancing and singing on every little occasion has been an active part of my growing up phase. I like to meet, talk, and to listen to people and know their stories. I enjoy food, which has also developed my interest in cooking and experimenting with different cuisines. I love traveling and exploring different corners of the world, and learning about cultures. I root for green earth and strongly believe in the power of each individual in contributing towards it. I am doing my bit in every way possible, and I hope everyone else is too!</p>
         </div>
       </div>
     </div>
