--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="card-header" contenteditable="true"><b class="text-success"> News</b></div>
             <div class="card-body">
               <div class="list-group" style="">
-			    <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-action" style="">[Upcoming]Talk on "DNN Based Beam Selection in mmW Heterogeneous Networks" at LINCS on 24 March 2021.&nbsp;<a href="https://www.lincs.fr/events/dnn-based-beam-selection-in-mmw-heterogeneous-networks/" target="_blank" class="">Link here</a></li>
+			    <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-action" style="">Talk on "DNN Based Beam Selection in mmW Heterogeneous Networks" at LINCS on 24 March 2021.&nbsp;<a href="https://www.lincs.fr/events/dnn-based-beam-selection-in-mmw-heterogeneous-networks/" target="_blank" class="">Link here</a></li>
                 <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-action" style="">Talk on "Secure and Robust MIMO Transceiver for Multicast Mission Critical Communications" at LINCS on 20 Jan 2021.&nbsp;<a href="https://www.lincs.fr/events/secure-and-robust-mimo-transceiver-for-multicast-mission-critical-communications/" target="_blank" class="">Link here</a></li>
                 <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-action" style="">Talk on "Multi-cell MIMO Transceiver design for Mission-Critical Communication" at LINCS on 16/10/2019.&nbsp;<a href="https://www.lincs.fr/events/talk-by-deepa-jagyasi/" target="_blank" class="">Link here</a></li>
               </div>
