past research work and indexing

--- a/Current_Research.html
+++ b/Current_Research.html
@@ -22,7 +22,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
-          <li class="nav-item"> <a class="nav-link active" href="Current_Research.html">Current Research</a> </li>
+          <li class="nav-item"> <a class="nav-link active" href="Current_Research.html">Research</a> </li>
           <li class="nav-item"> <a class="nav-link" href="DeepaJagyasi_CV.pdf" target="_blank">CV</a> </li>
           <li class="nav-item"> <a class="nav-link" href="Publications.html">Publications</a> </li>
           <li class="nav-item"> <a class="nav-link" href="blog.html">Research Blog<br></a> </li>
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3 class=""><b>Current Research</b><br><br></h3>
+          <h3 class=""><b>Ongoing Research</b><br><br></h3>
         </div>
       </div>
       <div class="row">
@@ -50,6 +50,22 @@
       </div>
     </div>
   </div>
+   <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h3 class=""><b>Previous Research</b><br><br></h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12" style="">
+          <h4 class=""><u>Low-Complexity Transceiver Designs for Millimeter Wave Communication</u><br></h4>
+          <p class="text-justify"> Millimeter wave (mmWave) communication is a promising technique for next generation wireless (5G and beyond-5G), as it can accomodate a large number of users and offers data rates in Giga-bits-per-second (Gbps) due to the availability of huge unlicenced bandwidth at mmWave frequencies. However, it is associated with many challenges such as free-space path loss, reduced coverage as it is susceptible to blockages, high cost and power consumption etc. Thus for efficient implementation of mmWave technology and to avail its benefits for next generation wireless networks, it is important to overcome these associated challenges. Driven by this, in my work, I focussed on design and evaluation of low complexity mmWave transceiver designs to achieve reduced hardware and computational complexity for various communication scenarios which includes multi-user MIMO downlink, MIMO interference channel, half-duplex (HD) and inband relay-assisted mmWave communication. </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
