--- a/Contact.html
+++ b/Contact.html
@@ -22,7 +22,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="Current_Research.html">Current Research</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="Current_Research.html">Research</a> </li>
           <li class="nav-item"> <a class="nav-link" href="DeepaJagyasi_CV.pdf" target="_blank">CV</a> </li>
           <li class="nav-item"> <a class="nav-link" href="Publications.html">Publications</a> </li>
           <li class="nav-item"> <a class="nav-link" href="blog.html">Research Blog<br></a> </li>
