--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="theme.css" type="text/css">
+  <meta name="google-site-verification" content="Z4ZygiMZ_SESPVuwjLDjDBF24NcsoL7LG4fkSH6METs" />
 </head>
 
 <body class="text-body">
@@ -22,7 +23,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link active" href="index.html">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="about.html">About</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="Current_Research.html">Current Research</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="Current_Research.html">Research</a> </li>
           <li class="nav-item"> <a class="nav-link" href="DeepaJagyasi_CV.pdf" target="_blank">CV</a> </li>
           <li class="nav-item"> <a class="nav-link" href="Publications.html">Publications</a> </li>
           <li class="nav-item"> <a class="nav-link" href="blog.html">Research Blog<br></a> </li>
