Added MWC to the website

--- a/Contact.html
+++ b/Contact.html
@@ -25,7 +25,7 @@
           <li class="nav-item"> <a class="nav-link" href="Current_Research.html">Research</a> </li>
           <li class="nav-item"> <a class="nav-link" href="DeepaJagyasi_CV.pdf" target="_blank">CV</a> </li>
           <li class="nav-item"> <a class="nav-link" href="Publications.html">Publications</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="blog.html">Research Blog<br></a> </li>
+          <li class="nav-item"> <a class="nav-link" href="MWC/index.html">Blog<br></a> </li>
           <li class="nav-item"> <a class="nav-link active" href="Contact.html">Contact<br></a> </li>
         </ul>
       </div>
