--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="theme.css" type="text/css">
-  <meta name="google-site-verification" content="Z4ZygiMZ_SESPVuwjLDjDBF24NcsoL7LG4fkSH6METs" />
+  <meta name="google-site-verification" content="Z4ZygiMZ_SESPVuwjLDjDBF24NcsoL7LG4fkSH6METs">
 </head>
 
 <body class="text-body">
@@ -26,7 +26,7 @@
           <li class="nav-item"> <a class="nav-link" href="Current_Research.html">Research</a> </li>
           <li class="nav-item"> <a class="nav-link" href="DeepaJagyasi_CV.pdf" target="_blank">CV</a> </li>
           <li class="nav-item"> <a class="nav-link" href="Publications.html">Publications</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="blog.html">Research Blog<br></a> </li>
+          <li class="nav-item"> <a class="nav-link" href="MWC/index.html">Blog<br></a> </li>
           <li class="nav-item"> <a class="nav-link" href="Contact.html">Contact<br></a> </li>
         </ul>
       </div>
@@ -70,7 +70,7 @@
             <div class="card-header" contenteditable="true"><b class="text-success"> News</b></div>
             <div class="card-body">
               <div class="list-group" style="">
-			    <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-action" style="">Talk on "DNN Based Beam Selection in mmW Heterogeneous Networks" at LINCS on 24 March 2021.&nbsp;<a href="https://www.lincs.fr/events/dnn-based-beam-selection-in-mmw-heterogeneous-networks/" target="_blank" class="">Link here</a></li>
+                <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-action" style="">Talk on "DNN Based Beam Selection in mmW Heterogeneous Networks" at LINCS on 24 March 2021.&nbsp;<a href="https://www.lincs.fr/events/dnn-based-beam-selection-in-mmw-heterogeneous-networks/" target="_blank" class="">Link here</a></li>
                 <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-action" style="">Talk on "Secure and Robust MIMO Transceiver for Multicast Mission Critical Communications" at LINCS on 20 Jan 2021.&nbsp;<a href="https://www.lincs.fr/events/secure-and-robust-mimo-transceiver-for-multicast-mission-critical-communications/" target="_blank" class="">Link here</a></li>
                 <li class="list-group-item d-flex justify-content-between align-items-start list-group-item-action" style="">Talk on "Multi-cell MIMO Transceiver design for Mission-Critical Communication" at LINCS on 16/10/2019.&nbsp;<a href="https://www.lincs.fr/events/talk-by-deepa-jagyasi/" target="_blank" class="">Link here</a></li>
               </div>
