--- a/Current_Research.html
+++ b/Current_Research.html
@@ -25,7 +25,7 @@
           <li class="nav-item"> <a class="nav-link active" href="Current_Research.html">Research</a> </li>
           <li class="nav-item"> <a class="nav-link" href="DeepaJagyasi_CV.pdf" target="_blank">CV</a> </li>
           <li class="nav-item"> <a class="nav-link" href="Publications.html">Publications</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="blog.html">Research Blog<br></a> </li>
+          <li class="nav-item"> <a class="nav-link" href="MWC/index.html">Blog<br></a> </li>
           <li class="nav-item"> <a class="nav-link" href="Contact.html">Contact<br></a> </li>
         </ul>
       </div>
@@ -50,7 +50,7 @@
       </div>
     </div>
   </div>
-   <div class="py-5">
+  <div class="py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -65,7 +65,6 @@
       </div>
     </div>
   </div>
-
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
