--- a/MWC/index.html
+++ b/MWC/index.html
@@ -27,7 +27,7 @@
           <li class="nav-item"> <a class="nav-link" href="../Current_Research.html">Research</a> </li>
           <li class="nav-item"> <a class="nav-link" href="../DeepaJagyasi_CV.pdf" target="_blank">CV</a> </li>
           <li class="nav-item"> <a class="nav-link" href="../Publications.html">Publications</a> </li>
-          <li class="nav-item"> <a class="nav-link active" href="blog.html">Blog</a> </li>
+          <li class="nav-item"> <a class="nav-link active" href="index.html">Blog</a> </li>
           <li class="nav-item"> <a class="nav-link" href="../Contact.html">Contact<br></a> </li>
         </ul>
       </div>
