added mmwave comic

--- a/MWC/index.html
+++ b/MWC/index.html
@@ -45,36 +45,28 @@
   <div class="py-5" style="">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 col-6 p-3"> <a href="./C1_physical_layer_security.html"> <img class="img-fluid d-block w-50 mx-auto" src="C1T1/Ch-1.1-Cover-Page.jpg" style="">&lt; </a></div><a href="">
+        <a href="" style="transition: all 0.25s;">
         </a>
       </div><a href="">
       </a>
     </div><a href="">
     </a>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6"><a href="C1_physical_layer_security.html"><img class="img-fluid d-block mx-auto h-50" src="C1T1/Ch-1.1-Cover-Page.jpg" style=""></a></div>
+        <div class="col-md-6 w-25"><a href="C2_mmwave_communication.html"><img class="img-fluid d-block mx-auto h-50" src="C2T1/mmWave_title_page.jpeg"></a></div>
+      </div>
+    </div>
   </div><a href="">
     <div class="py-5 text-center" style="">
       <div class="container">
         <div class="row">
           <div class="mx-auto col-md-12">
-            <h1 class="mb-3">Meet&nbsp;the team of MWC</h1>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto rounded-circle" src="../deepa_pic_mwc.jpeg" width="100" alt="Card image cap">
-            <h4> <b>Deepa Jagyasi</b></h4>
-            <p>Technical Writer</p>
-            <p class="mb-0"><br></p>
-          </div>
-          <div class="col-lg-4 col-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto rounded-circle" src="../ayush_pic.jpeg" width="100" alt="Card image cap">
-            <h4> <b>Ayush Aggarwal</b></h4>
-            <p>Technical Writer&nbsp;</p>
-          </div>
-          <div class="col-lg-4 col-6 p-4"> <img class="d-block mb-3 mx-auto img-fluid rounded-circle" src="../Ujjawal_pic.jpg" width="100" height="100
-80
-80">
-            <h4> <b>Ujjawal Aggarwal</b></h4>
-            <p>Illustrator</p>
-          </div>
         </div>
       </div>
     </div>
@@ -82,6 +74,50 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </a>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="mb-3 text-center">Meet&nbsp;the team of MWC</h1>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="col-lg-12 col-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto rounded-circle" src="../deepa_pic_mwc.jpeg" width="100" alt="Card image cap">
+            <h4> <b>Deepa Jagyasi</b></h4>
+            <p>Technical Writer</p>
+            <p class="mb-0"><br></p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="col-lg-12 col-6 p-4"> <img class="img-fluid d-block mb-3 mx-auto rounded-circle" src="../ayush_pic.jpeg" width="100" alt="Card image cap">
+            <h4> <b>Ayush Aggarwal</b></h4>
+            <p>Technical Writer&nbsp;</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="col-lg-12 col-6 p-4"> <img class="d-block mb-3 mx-auto img-fluid rounded-circle" src="../Ujjawal_pic.jpg" width="100" height="100
+80
+80">
+            <h4> <b>Ujjawal Aggarwal</b></h4>
+            <p>Illustrator</p>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="col-lg-12 col-6 p-4"> <img class="d-block mb-3 mx-auto img-fluid rounded-circle" width="100" height="100
+80
+80" src="../leisure_toons.jpg">
+            <h4> <b>Leisure Toons</b></h4>
+            <p>Illustrator</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
