--- a/MWC/index.html
+++ b/MWC/index.html
@@ -55,8 +55,8 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-6"><a href="C1_physical_layer_security.html"><img class="img-fluid d-block mx-auto h-50" src="C1T1/Ch-1.1-Cover-Page.jpg" style=""></a></div>
-        <div class="col-md-6 w-25"><a href="C2_mmwave_communication.html"><img class="img-fluid d-block mx-auto h-50" src="C2T1/mmWave_title_page.jpeg"></a></div>
+        <div class="col-md-6"><a href="C1_physical_layer_security.html"><img class="img-fluid d-block mx-auto" src="C1T1/Ch-1.1-Cover-Page.jpg" style=""></a></div>
+        <div class="col-md-6 w-25"><a href="C2_mmwave_communication.html"><img class="img-fluid d-block mx-auto" src="C2T1/mmWave_title_page.jpeg" style="" width="71%"></a></div>
       </div>
     </div>
   </div><a href="">
