--- a/MWC/C1_physical_layer_security.html
+++ b/MWC/C1_physical_layer_security.html
@@ -41,7 +41,7 @@
     </div>
   </div>
   <div class="py-1">
-    <div class="container w-50">
+    <div class="container">
       <div class="row">
         <div class="col-md-12 border border-dark">
           <div class="carousel slide" data-ride="carousel" id="carousel">
