--- a/MWC/C2_mmwave_communication.html
+++ b/MWC/C2_mmwave_communication.html
@@ -35,28 +35,28 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1 class="">Physical Layer Security: Passive Eavesdropper</h1>
+          <h1 class="">Millimeter wave communication: An Introduction</h1>
         </div>
       </div>
     </div>
   </div>
   <div class="py-1">
-    <div class="container w-50">
+    <div class="container">
       <div class="row">
         <div class="col-md-12 border border-dark">
           <div class="carousel slide" data-ride="carousel" id="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="C2T1/mmWave_title_page.jpeg">
+              <div class="carousel-item active"> <img class="d-block img-fluid mx-auto" src="C2T1/mmWave_title_page.jpeg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="C2T1/page 1.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid mx-auto" src="C2T1/page 1.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="C2T1/page 2.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid mx-auto" src="C2T1/page 2.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="C2T1/page 3.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid mx-auto" src="C2T1/page 3.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="C2T1/page 4.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid mx-auto" src="C2T1/page 4.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="C2T1/page 5.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid mx-auto" src="C2T1/page 5.jpg">
               </div>
             </div> <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
           </div>
